formatting fixed witih alignment of small text in column titles

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p, h4, h3 {
     margin: 0rem;
     font-size: smaller;
     position: relative;
-    top: 0.19rem;
+    top: 0.22rem;
     margin-left: 0.04rem;
 }
 
@@ -68,8 +68,8 @@ p, h4, h3 {
     margin: 0rem;
     font-size: smaller;
     position: relative;
-    top: 0.18rem;
-    margin-left: 0.04rem;
+    top: 0.25rem;
+    margin-left: 0.06rem;
 }
 
 * h5 {
@@ -83,8 +83,8 @@ p, h4, h3 {
 * h5 small {
     font-size: smaller;
     position: relative;
-    top: 0.02rem;
-    margin-left: 0.04rem;
+    top: 0.01rem;
+    margin-left: 0.06rem;
 }
 
 * label {
@@ -1432,6 +1432,12 @@ button:hover {
 #height-expander {
     display: block;
     height: 0vh;
+}
+
+.smaller-time-font {
+    font-size: small;
+    position: relative;
+    padding-top: 0.23rem;
 }
 
 
